first working demo

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,3 +1,10 @@
 @import 'nib'
 @import 'vendor/normalize.css'
 @import 'base'
+
+#wall 
+  display: block
+  margin: 0 auto
+
+h1 
+  text-align: center;
