basic multiply flter

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -3,8 +3,15 @@
 @import 'base'
 
 #wall 
-  display: block
+  position: absolute
   margin: 0 auto
 
 h1 
+  text-align: center;
+
+#spotlight
+  position: absolute
+  margin: 0 auto
+
+body
   text-align: center;
