combine two canvases into third, output canvas

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -2,16 +2,14 @@
 @import 'vendor/normalize.css'
 @import 'base'
 
-#wall 
-  position: absolute
+canvas 
+  display block;
   margin: 0 auto
+  border: 1px solid black
+  margin-bottom: 20px;
 
 h1 
   text-align: center;
-
-#spotlight
-  position: absolute
-  margin: 0 auto
 
 body
   text-align: center;
