remove canvas-factory and center large bg image on canvas

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -9,9 +9,12 @@ canvas
   margin-bottom: 20px;
 
 h1 
+  display: none
   text-align: center;
   font-size: 3.5rem;
   margin: 10px 0 0 0;
 
+h2
+  display: none
 body
   text-align: center;
