--- a/styles/index.styl
+++ b/styles/index.styl
@@ -9,12 +9,13 @@ canvas
   margin-bottom: 20px;
 
 h1 
-  display: none
   text-align: center;
-  font-size: 3.5rem;
+  font-size: 2.8rem;
   margin: 10px 0 0 0;
 
 h2
-  display: none
+  font-size: 1.3rem
+  margin 15px 0
+
 body
   text-align: center;
